--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "jwt-decode": "^4.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
